workshop-full-day/2-Lets-get-started-with-a-cloud-native-microservice-application-on-Kubernetes-with-Istio/authors-nodejs/deployment/istio-egress-cloudant.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: cloudant
spec:
  hosts:
  - 
  ports:
  - number: 443
    name: tls
    protocol: TLS
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-egressgateway
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 443
      name: tls
      protocol: TLS
    hosts:
    - 
    tls:
      mode: PASSTHROUGH
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-cloudant
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: cloudant
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cloudant-through-egress-gateway
spec:
  hosts:
  - 
  gateways:
  - mesh
  - istio-egressgateway
  tls:
  - match:
    - gateways:
      - mesh
      port: 443
      sni_hosts:
      - 
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: cloudant
        port:
          number: 443
  - match:
    - gateways:
      - istio-egressgateway
      port: 443
      sni_hosts:
      - 
    route:
    - destination:
        host: 
        port:
          number: 443
      weight: 100
